# ai-log-analyzer

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_cases.py  routes_review.py  routes_tasks.py
backend/app/core/: config.py  database.py  storage.py
backend/app/models/: db.py  schemas.py
backend/app/services/: archive_service.py  boot_reconstruction_service.py  diagnosis_workflow.py  model_gateway.py  playbook_service.py  segment_service.py  whitelist_service.py
backend/app/workers/: task_runner.py
backend/tests/: test_api_tasks.py  test_archive_service.py  test_boot_reconstruction_service.py  test_deployment_artifacts.py  test_diagnosis_workflow.py  test_e2e_demo.py  test_model_gateway.py  test_models.py  test_whitelist_service.py
configs/diagnosis_playbooks/: boot_region_abnormal.yaml  driver_probe_failure.yaml  userspace_service_startup.yaml
configs/log_whitelist/: bootloader_current.yaml  kernel_history.yaml  userspace_startup.yaml
docs/: deployment.md  project-status.md
docs/progress/: 2026-05-31-mvp-development-progress.md
docs/superpowers/plans/: 2026-05-31-ai-log-analyzer-mvp.md
docs/superpowers/specs/: 2026-05-31-ai-log-analyzer-prd.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: main.test.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: cases.ts  client.ts  tasks.test.ts  tasks.ts
frontend/src/components/: AppLayout.tsx  BootTimeline.tsx  ui.tsx  (+2 more)
(+10 files in other folders)
